--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ tag_build = dev
 tag_svn_revision = true
 
 [easy_install]
+zip_ok = false
 find_links = http://www.pylonshq.com/download/
 
 [nosetests]
